# cppBoy

./: .gitignore  CMakeLists.txt  LICENCE  README.md
binary_src/: main.cpp
cmake/: add_sources.cmake  gtest.cmake  tools.cmake
src/: CPU.cpp  CPU.h  Instruction.h  Memory.cpp  Memory.h  Registers.h  main.cpp
src/instruction/: AddByteInstruction.cpp  AddByteInstruction.h  Instruction.cpp  Instruction.h  InstructionInterpreter.cpp  InstructionInterpreter.h  LoadByteInstruction.cpp  LoadByteInstruction.h  LoadWordInstruction.cpp  LoadWordInstruction.h  PopInstruction.cpp  PopInstruction.h  PushInstruction.cpp  PushInstruction.h
src/memory/: Addressable.cpp  Addressable.h  ByteAddressable.cpp  ByteAddressable.h  BytePointer.cpp  BytePointer.h  ByteReference.cpp  ByteReference.h  CompositeWordReference.cpp  CompositeWordReference.h  FlagRegister.cpp  FlagRegister.h  Memory.cpp  Memory.h  NewByteReference.cpp  NewByteReference.h  NewWordReference.cpp  NewWordReference.h  WordAddressable.cpp  WordAddressable.h  WordReference.cpp  WordReference.h
src/util/: FlagHelpers.cpp  FlagHelpers.h
test/: instruction.cpp  memory.cpp  util.cpp
